objects/Complaint_Relationships__c.object
<CustomObject>
    <fields>
        <fullName>account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Complaint Relationships</relationshipLabel>
        <relationshipName>Complaint_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>complaint__c</referenceTo>
        <relationshipLabel>Complaint Relationships</relationshipLabel>
        <relationshipName>Complaint_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>complaint_id_relationship_role__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>Used in automation to prevent duplicate Implanting or Explanting Physician Complaint Relationship records.</inlineHelpText>
        <label>Complaint ID &amp; Relationship Role</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Please choose a Physician or Other Contact.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Physician, Other Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Complaint Relationships</relationshipLabel>
        <relationshipName>Complaint_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>type_of_contact__c</fullName>
        <label>Type of contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Biotronik Contact Person</fullName>
                </value>
                <value>
                    <fullName>Dr Letter Recipient</fullName>
                </value>
                <value>
                    <fullName>Event Physician</fullName>
                </value>
                <value>
                    <fullName>Explanting Physician</fullName>
                </value>
                <value>
                    <fullName>Following Physician</fullName>
                </value>
                <value>
                    <fullName>Implanting Physician</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Returned Product Sender</fullName>
                </value>
                <value>
                    <fullName>Revising Physician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaint_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Complaint Relationships</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Complaint Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>If_Bio_employee_require_User</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(user__c),
CONTAINS(TEXT(type_of_contact__c),&quot;Biotronik&quot;))</errorConditionFormula>
        <errorDisplayField>user__c</errorDisplayField>
        <errorMessage>If the relationship you are adding is with a Biotronik employee, please add a User.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Physician_require_Contact</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISBLANK(contact__c),
OR(
CONTAINS(TEXT(type_of_contact__c),&quot;Physician&quot;),
CONTAINS(TEXT(type_of_contact__c),&quot;Nurse&quot;)))</errorConditionFormula>
        <errorDisplayField>contact__c</errorDisplayField>
        <errorMessage>If the relationship you are adding is with a physician or nurse, please enter the Contact.  If no Contact exists, please create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_one_relationship</fullName>
        <active>true</active>
        <description>Allows only one relationship to be added on a Complaint Relationship: Contact or Account or User.</description>
        <errorConditionFormula>OR(

AND(
!ISBLANK(account__c),
!ISBLANK(contact__c),
!ISBLANK(user__c)),

AND(
!ISBLANK(account__c),
!ISBLANK(contact__c)),

AND(
!ISBLANK(contact__c),
!ISBLANK(user__c)),

AND(
!ISBLANK(account__c),
!ISBLANK(user__c)))</errorConditionFormula>
        <errorMessage>You may only enter one relationship: Contact OR Account OR User.  Please create additional Complaint Relationships for other people.</errorMessage>
    </validationRules>
</CustomObject>